<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="bottom"
  android:layout_gravity="bottom"
  android:id="@+id/linearLayout"
  style="@style/backColor"
  >
  <TableLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  style="@style/backColor"
  android:gravity="center"
  >  
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center"
    >
 <ImageButton 
    android:id="@+id/imageButton1" 
 	android:src="@drawable/btn_main_add" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter"
 	android:background="@null" android:onClick="myClickHandler">
 </ImageButton>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false">
 </ImageButton>
  <ImageButton 
    android:src="@drawable/btn_main_hist" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter"  
 	android:id="@+id/imageButton2" 
 	android:background="@null" android:onClick="myClickHandler">
 </ImageButton>
</TableRow>
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center">
 <TextView 
 	android:text="@string/menu_main_add"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold"
 	android:layout_gravity="center_horizontal"
 	android:textColor="#ffffff"
 	android:typeface="serif"
 	>
 </TextView>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false">
 </ImageButton>
  <TextView 
 	android:text="@string/menu_main_hist"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold" 
 	android:typeface="serif"
 	android:textColor="#ffffff">
 </TextView>
</TableRow>
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center">
 <ImageButton 
 	android:src="@drawable/btn_main_calc" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter"
 	android:id="@+id/imageButton3" android:onClick="myClickHandler"
 	android:background="@null">
 </ImageButton>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false"
 	>
 </ImageButton>
  <ImageButton 
 	android:src="@drawable/btn_main_share" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter"
 	android:id="@+id/imageButton4" 
 	android:background="@null" android:onClick="myClickHandler">
 </ImageButton>
</TableRow>
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center">
 <TextView 
 	android:text="@string/menu_main_calc_bmi"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold"
 	 android:textColor="#ffffff" 
 	android:typeface="serif"
 	>
 </TextView>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false">
 </ImageButton>
  <TextView 
 	android:text="@string/menu_main_share"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold"
 	 android:textColor="#ffffff" 
 	android:typeface="serif"
 	>
 </TextView>
</TableRow>
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center">
 <ImageButton 
 	android:src="@drawable/btn_main_about" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter" 
 	android:id="@+id/imageButton5" 
 	android:background="@null" android:onClick="myClickHandler">
 </ImageButton>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false">
 </ImageButton>
  <ImageButton 
 	android:src="@drawable/btn_main_exit" 
 	android:layout_width="68dp"
  	android:layout_height="68dp"
  	android:scaleType="fitCenter"
	android:id="@+id/imageButton6" 
 	android:background="@null" android:onClick="myClickHandler">
 </ImageButton>
</TableRow>
<TableRow 
    android:id="@+id/tableRow1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center">
 <TextView 
 	android:text="@string/menu_main_about"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold"
 	 android:textColor="#ffffff" 
 	android:typeface="serif"
 	>
 </TextView>
 <ImageButton 
 	android:src="@drawable/iconka2" 
 	android:id="@+id/imageButton3" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content" 
 	android:visibility="invisible" 
 	android:clickable="false">
 </ImageButton>
  <TextView 
 	android:text="@string/menu_main_exit"
 	android:layout_height="fill_parent"
 	android:textSize="14dp"
 	android:textStyle="bold"
 	 android:textColor="#ffffff" 
 	android:typeface="serif"
 	>
 </TextView>
</TableRow>
</TableLayout>

</LinearLayout>
