<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/InfoProfile" android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:orientation="vertical"

              android:background="#ffffff">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:gravity="top"
                  android:layout_gravity="top" android:orientation="vertical" android:layout_marginTop="2dip"
                  android:paddingLeft="3dip">
        <!--status-->
        <TextView android:id="@+id/InfoStatusText" android:visibility="gone"
                  android:layout_height="wrap_content" android:layout_width="fill_parent"
                  android:layout_marginBottom="2px"
                  android:textColor="@android:color/black"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent">
            <ImageButton android:id="@+id/InfoPhoto"
                         android:minWidth="105dip" android:minHeight="150dip"
                         android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
                          android:orientation="vertical">
                <TableLayout android:id="@+id/info_table"
                             android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <!--sex-->
                    <TableRow android:id="@+id/sex_row" android:visibility="gone">
                        <TextView android:layout_column="1" android:text="@string/info_sex"
                                  android:padding="3dip"/>
                        <TextView android:id="@+id/user_sex" android:gravity="left"
                                  android:padding="3dip" android:textColor="@android:color/black"/>
                    </TableRow>
                    <!--birthday-->
                    <TableRow android:id="@+id/birthday_row"
                              android:visibility="gone">
                        <TextView android:layout_column="1" android:text="@string/info_birthday"
                                  android:padding="3dip"/>
                        <TextView android:id="@+id/birthday" android:gravity="left"
                                  android:padding="3dip" android:textColor="@android:color/black"/>
                    </TableRow>
                    <!--phone-->
                    <TableRow android:id="@+id/phone_row" android:visibility="gone">
                        <TextView android:layout_column="1" android:text="@string/info_phone"
                                  android:padding="3dip"/>
                        <TextView android:id="@+id/phone" android:gravity="left"
                                  android:padding="3dip" android:textColor="@android:color/black"/>
                    </TableRow>
                    <!--family status-->
                    <TableRow android:id="@+id/family_status_row"
                              android:visibility="gone">
                        <TextView android:layout_column="1" android:text="@string/info_status"
                                  android:padding="3dip"/>
                        <TextView android:id="@+id/status" android:gravity="left"
                                  android:padding="3dip" android:textColor="@android:color/black"/>
                    </TableRow>
                    <!--political views-->
                    <!--<TableRow android:id="@+id/views_row" android:visibility="gone">-->
                    <!--<TextView android:layout_column="1" android:text="@string/info_views"-->
                    <!--android:padding="3dip"/>-->
                    <!--<TextView android:id="@+id/views" android:padding="3dip"-->
                    <!--android:gravity="left" android:textColor="@android:color/black"/>-->
                    <!--</TableRow>-->
                    <!--current city-->
                    <!--<TableRow android:id="@+id/city_row" android:visibility="gone">-->
                    <!--<TextView android:layout_column="1" android:text="@string/info_city"-->
                    <!--android:padding="3dip"/>-->
                    <!--<TextView android:id="@+id/city" android:padding="3dip"-->
                    <!--android:gravity="left" android:textColor="@android:color/black"/>-->
                    <!--</TableRow>-->
                </TableLayout>
                <LinearLayout android:id="@+id/pw" android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:orientation="vertical" android:visibility="gone">
                    <TextView android:text="@string/info_views"
                              android:padding="3dip" android:gravity="left" android:layout_width="fill_parent"
                              android:layout_height="wrap_content"/>
                    <TextView android:id="@+id/views" android:padding="3dip" android:layout_width="fill_parent"
                              android:layout_height="wrap_content"
                              android:gravity="left" android:textColor="@android:color/black"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/current_city" android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:orientation="vertical" android:visibility="gone">
                    <TextView android:text="@string/info_city" android:layout_height="wrap_content"
                              android:layout_width="fill_parent" android:gravity="left"
                              android:padding="3dip"/>
                    <TextView android:id="@+id/city" android:padding="3dip" android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:gravity="left" android:textColor="@android:color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
